Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Thi lớp 10 công lập Hà Nội: Các mốc thời gian quan trọng cần nhớ",
+    "content": "Kỳ thi lớp 10 công lập tại Hà Nội trong năm 2025 sẽ diễn ra từ ngày 7 đến 9 tháng 6. Ngày 7 và 8 tháng 6 dành cho thí sinh đại trà, trong khi ngày 9 tháng 6 dành riêng cho thí sinh thi chuyên. Số lượng trường chuyên sẽ tăng từ 2 lên 4, kéo theo việc tăng chỉ tiêu tuyển sinh. Điểm thi và điểm chuẩn sẽ được công bố cùng một thời điểm, theo quy chế mới của Bộ Giáo dục và Đào tạo.",
+    "link": "https://dantri.com.vn/giao-duc/thi-lop-10-cong-lap-ha-noi-cac-moc-thoi-gian-quan-trong-can-nho-20250322235735236.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Kỳ thi lớp 10 công lập Hà Nội năm 2025 sẽ diễn ra vào những ngày nào?",
+    "answers": [
+      {
+        "text": "Từ 7 đến 9 tháng 6",
+        "correct": true
+      },
+      {
+        "text": "Từ 5 đến 7 tháng 6",
+        "correct": false
+      },
+      {
+        "text": "Từ 10 đến 12 tháng 6",
+        "correct": false
+      },
+      {
+        "text": "Từ 1 đến 3 tháng 6",
+        "correct": false
+      },
+      {
+        "text": "Từ 15 đến 17 tháng 6",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nga ra tối hậu thư cho Ukraine sau thỏa thuận ngừng tấn công hạ tầng",
     "content": "Moscow đã đưa ra tối hậu thư cho Ukraine, cảnh báo rằng họ sẽ có hành động trả đũa nếu Ukraine tiếp tục tấn công cơ sở hạ tầng năng lượng của Nga, vi phạm thỏa thuận ngừng bắn. Người phát ngôn Bộ Ngoại giao Nga, Maria Zakharova, chỉ trích Ukraine vì đã không tuân thủ các thỏa thuận và tiếp tục thực hiện các cuộc tấn công. Trong khi đó, các cuộc tấn công qua lại giữa hai bên vẫn diễn ra, làm gia tăng căng thẳng trong khu vực.",
     "link": "https://dantri.com.vn/the-gioi/nga-ra-toi-hau-thu-cho-ukraine-sau-thoa-thuan-ngung-tan-cong-ha-tang-20250323060226191.htm",
@@ -524,37 +555,6 @@
       },
       {
         "text": "FPT",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Diện mạo Bãi Sau Vũng Tàu sau gần 5 tháng chỉnh trang",
-    "content": "Sau gần 5 tháng chỉnh trang với kinh phí khoảng 1.100 tỷ đồng, dự án chỉnh trang biển Bãi Sau Vũng Tàu đang dần hoàn thiện. Một số hạng mục, bao gồm công viên và đường đi bộ, sẽ được đưa vào sử dụng vào dịp lễ 30/4. Dự án đã hoàn thành khoảng 60% khối lượng công việc, tuy nhiên, một số đoạn còn lại bị chậm tiến độ do các vấn đề liên quan đến bàn giao mặt bằng.",
-    "link": "https://vnexpress.net/dien-mao-bai-sau-vung-tau-sau-gan-5-thang-chinh-trang-4864622.html",
-    "cat": "du-lich",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Dự án chỉnh trang biển Bãi Sau Vũng Tàu đã hoàn thiện được bao nhiêu phần trăm?",
-    "answers": [
-      {
-        "text": "60%",
-        "correct": true
-      },
-      {
-        "text": "70%",
-        "correct": false
-      },
-      {
-        "text": "50%",
-        "correct": false
-      },
-      {
-        "text": "80%",
-        "correct": false
-      },
-      {
-        "text": "90%",
         "correct": false
       }
     ]
@@ -667,6 +667,37 @@
       },
       {
         "text": "Cô luôn được hỗ trợ từ gia đình trong mọi việc.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Diện mạo Bãi Sau Vũng Tàu sau gần 5 tháng chỉnh trang",
+    "content": "Sau gần 5 tháng chỉnh trang với kinh phí khoảng 1.100 tỷ đồng, dự án chỉnh trang biển Bãi Sau Vũng Tàu đang dần hoàn thiện. Một số hạng mục, bao gồm công viên và đường đi bộ, sẽ được đưa vào sử dụng vào dịp lễ 30/4. Dự án đã hoàn thành khoảng 60% khối lượng công việc, tuy nhiên, một số đoạn còn lại bị chậm tiến độ do các vấn đề liên quan đến bàn giao mặt bằng.",
+    "link": "https://vnexpress.net/dien-mao-bai-sau-vung-tau-sau-gan-5-thang-chinh-trang-4864622.html",
+    "cat": "du-lich",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Dự án chỉnh trang biển Bãi Sau Vũng Tàu đã hoàn thiện được bao nhiêu phần trăm?",
+    "answers": [
+      {
+        "text": "60%",
+        "correct": true
+      },
+      {
+        "text": "70%",
+        "correct": false
+      },
+      {
+        "text": "50%",
+        "correct": false
+      },
+      {
+        "text": "80%",
+        "correct": false
+      },
+      {
+        "text": "90%",
         "correct": false
       }
     ]
@@ -1426,32 +1457,32 @@
     ]
   },
   {
-    "title": "Hủy mỡ để giảm 'bụng bia'",
-    "content": "Bài viết trình bày trường hợp của anh Bình và anh Cường, hai người đàn ông gặp vấn đề về vòng bụng lớn, thường được gọi là 'bụng bia'. Anh Bình đã chọn phương pháp đông hủy mỡ để giảm mỡ bụng, với kết quả giảm 6 cm vòng bụng trong hai tháng. Trong khi đó, anh Cường đã cải thiện tình trạng sức khỏe của mình bằng cách kết hợp điều trị nội tiết, dinh dưỡng và vận động, giúp giảm 12 kg và vòng bụng xuống còn 88 cm. Bác sĩ khuyến cáo nam giới cần chú ý đến vòng bụng lớn để phòng ngừa các vấn đề sức khỏe liên quan đến mỡ nội tạng.",
-    "link": "https://vnexpress.net/huy-mo-de-giam-bung-bia-4864565.html",
+    "title": "Ho ra máu cảnh báo bệnh gì?",
+    "content": "Ho ra máu có thể là dấu hiệu của nhiều bệnh lý nghiêm trọng như ung thư phổi, lao phổi, và bệnh phổi tắc nghẽn mạn tính. Các nguyên nhân khác bao gồm viêm phế quản, tổn thương đường hô hấp, và các tình trạng viêm tự miễn. Nếu ho ra máu kéo dài hoặc kèm theo triệu chứng nghiêm trọng như đau ngực hay sút cân, người bệnh nên đi khám ngay. Để phòng ngừa, cần điều trị sớm các bệnh viêm nhiễm đường hô hấp và bỏ thuốc lá.",
+    "link": "https://vnexpress.net/ho-ra-mau-canh-bao-benh-gi-4860525.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Làm thế nào để giảm 'bụng bia'?",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Ho ra máu có thể cảnh báo bệnh gì nguy hiểm?",
     "answers": [
       {
-        "text": "Sử dụng phương pháp đông hủy mỡ kết hợp chế độ dinh dưỡng và tập luyện",
+        "text": "Ung thư phổi",
         "correct": true
       },
       {
-        "text": "Chỉ cần ăn kiêng mà không cần tập thể dục",
+        "text": "Cảm cúm",
         "correct": false
       },
       {
-        "text": "Uống thuốc giảm cân mà không cần thay đổi lối sống",
+        "text": "Viêm họng",
         "correct": false
       },
       {
-        "text": "Không làm gì mà vẫn giảm cân",
+        "text": "Cao huyết áp",
         "correct": false
       },
       {
-        "text": "Chỉ cần tập thể dục mà không cần thay đổi chế độ ăn uống",
+        "text": "Đau dạ dày",
         "correct": false
       }
     ]
@@ -1488,6 +1519,37 @@
     ]
   },
   {
+    "title": "Hủy mỡ để giảm 'bụng bia'",
+    "content": "Bài viết trình bày trường hợp của anh Bình và anh Cường, hai người đàn ông gặp vấn đề về vòng bụng lớn, thường được gọi là 'bụng bia'. Anh Bình đã chọn phương pháp đông hủy mỡ để giảm mỡ bụng, với kết quả giảm 6 cm vòng bụng trong hai tháng. Trong khi đó, anh Cường đã cải thiện tình trạng sức khỏe của mình bằng cách kết hợp điều trị nội tiết, dinh dưỡng và vận động, giúp giảm 12 kg và vòng bụng xuống còn 88 cm. Bác sĩ khuyến cáo nam giới cần chú ý đến vòng bụng lớn để phòng ngừa các vấn đề sức khỏe liên quan đến mỡ nội tạng.",
+    "link": "https://vnexpress.net/huy-mo-de-giam-bung-bia-4864565.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Làm thế nào để giảm 'bụng bia'?",
+    "answers": [
+      {
+        "text": "Sử dụng phương pháp đông hủy mỡ kết hợp chế độ dinh dưỡng và tập luyện",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần ăn kiêng mà không cần tập thể dục",
+        "correct": false
+      },
+      {
+        "text": "Uống thuốc giảm cân mà không cần thay đổi lối sống",
+        "correct": false
+      },
+      {
+        "text": "Không làm gì mà vẫn giảm cân",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần tập thể dục mà không cần thay đổi chế độ ăn uống",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nặn mụn có nguy cơ mắc uốn ván không?",
     "content": "Nặn mụn có thể dẫn đến nguy cơ mắc uốn ván nếu không thực hiện đúng cách, bởi vì việc tạo ra vết thương hở có thể cho phép vi khuẩn xâm nhập. Đặc biệt, nếu dụng cụ không được tiệt trùng hoặc tay không sạch sẽ, nguy cơ nhiễm trùng tăng lên. Để phòng ngừa, người nặn mụn nên tiêm vaccine phòng uốn ván và thăm khám bác sĩ để được điều trị đúng cách.",
     "link": "https://vnexpress.net/nan-mun-co-nguy-co-mac-uon-van-khong-4864591.html",
@@ -1510,37 +1572,6 @@
       },
       {
         "text": "Chỉ nếu có vết thương sâu.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ho ra máu cảnh báo bệnh gì?",
-    "content": "Ho ra máu có thể là dấu hiệu của nhiều bệnh lý nghiêm trọng như ung thư phổi, lao phổi, và bệnh phổi tắc nghẽn mạn tính. Các nguyên nhân khác bao gồm viêm phế quản, tổn thương đường hô hấp, và các tình trạng viêm tự miễn. Nếu ho ra máu kéo dài hoặc kèm theo triệu chứng nghiêm trọng như đau ngực hay sút cân, người bệnh nên đi khám ngay. Để phòng ngừa, cần điều trị sớm các bệnh viêm nhiễm đường hô hấp và bỏ thuốc lá.",
-    "link": "https://vnexpress.net/ho-ra-mau-canh-bao-benh-gi-4860525.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Ho ra máu có thể cảnh báo bệnh gì nguy hiểm?",
-    "answers": [
-      {
-        "text": "Ung thư phổi",
-        "correct": true
-      },
-      {
-        "text": "Cảm cúm",
-        "correct": false
-      },
-      {
-        "text": "Viêm họng",
-        "correct": false
-      },
-      {
-        "text": "Cao huyết áp",
-        "correct": false
-      },
-      {
-        "text": "Đau dạ dày",
         "correct": false
       }
     ]
