--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Toyota Supra ra mắt phiên bản cuối cùng, giá 155.000 USD",
+    "content": "Toyota vừa ra mắt phiên bản cuối cùng của dòng xe thể thao Supra, mang tên GR Supra A90 Final Edition, với giá bán 155.000 USD. Phiên bản này chỉ sản xuất giới hạn 300 chiếc và khách hàng phải tham gia bốc thăm để có cơ hội mua. GR Supra A90 Final Edition được nâng cấp về sức mạnh, với động cơ 6 xi-lanh 3 lít đạt công suất 429 mã lực, cùng nhiều cải tiến về khí động học và nội thất so với các phiên bản tiêu chuẩn.",
+    "link": "https://vnexpress.net/toyota-supra-ra-mat-phien-ban-cuoi-cung-gia-155-000-usd-4864630.html",
+    "cat": "oto-xe-may",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Toyota Supra phiên bản cuối cùng có giá bao nhiêu?",
+    "answers": [
+      {
+        "text": "155.000 USD",
+        "correct": true
+      },
+      {
+        "text": "80.000 USD",
+        "correct": false
+      },
+      {
+        "text": "69.000 USD",
+        "correct": false
+      },
+      {
+        "text": "429.000 USD",
+        "correct": false
+      },
+      {
+        "text": "300.000 USD",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thi lớp 10 công lập Hà Nội: Các mốc thời gian quan trọng cần nhớ",
     "content": "Kỳ thi lớp 10 công lập tại Hà Nội trong năm 2025 sẽ diễn ra từ ngày 7 đến 9 tháng 6. Ngày 7 và 8 tháng 6 dành cho thí sinh đại trà, trong khi ngày 9 tháng 6 dành riêng cho thí sinh thi chuyên. Số lượng trường chuyên sẽ tăng từ 2 lên 4, kéo theo việc tăng chỉ tiêu tuyển sinh. Điểm thi và điểm chuẩn sẽ được công bố cùng một thời điểm, theo quy chế mới của Bộ Giáo dục và Đào tạo.",
     "link": "https://dantri.com.vn/giao-duc/thi-lop-10-cong-lap-ha-noi-cac-moc-thoi-gian-quan-trong-can-nho-20250322235735236.htm",
@@ -232,37 +263,6 @@
       },
       {
         "text": "FPT",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bí quyết trở thành thủ khoa toàn trường của \"bà mẹ U40\"",
-    "content": "Nguyễn Song Châu, một bà mẹ U40, đã xuất sắc trở thành thủ khoa toàn trường tại Trường Đại học Gia Định với điểm trung bình 3.7/4.0. Dù phải vừa học, vừa làm và chăm sóc con nhỏ, chị vẫn kiên trì theo đuổi ước mơ học tập bằng cách sắp xếp thời gian hợp lý. Châu đã tham gia nhiều hoạt động ngoại khóa và hiện đang làm việc tại các trung tâm Anh ngữ, với mong muốn trở thành giáo viên tiếng Anh trong tương lai.",
-    "link": "https://dantri.com.vn/giao-duc/bi-quyet-tro-thanh-thu-khoa-toan-truong-cua-ba-me-u40-20250322205358478.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Nguyễn Song Châu đã đạt được thành tựu gì trong học tập?",
-    "answers": [
-      {
-        "text": "Stt thủ khoa toàn trường",
-        "correct": true
-      },
-      {
-        "text": "Tốt nghiệp loại khá",
-        "correct": false
-      },
-      {
-        "text": "Tốt nghiệp loại trung bình",
-        "correct": false
-      },
-      {
-        "text": "Trở thành giảng viên",
-        "correct": false
-      },
-      {
-        "text": "Tham gia nhiều hoạt động ngoại khóa",
         "correct": false
       }
     ]
@@ -375,6 +375,37 @@
       },
       {
         "text": "90%",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bí quyết trở thành thủ khoa toàn trường của \"bà mẹ U40\"",
+    "content": "Nguyễn Song Châu, một bà mẹ U40, đã xuất sắc trở thành thủ khoa toàn trường tại Trường Đại học Gia Định với điểm trung bình 3.7/4.0. Dù phải vừa học, vừa làm và chăm sóc con nhỏ, chị vẫn kiên trì theo đuổi ước mơ học tập bằng cách sắp xếp thời gian hợp lý. Châu đã tham gia nhiều hoạt động ngoại khóa và hiện đang làm việc tại các trung tâm Anh ngữ, với mong muốn trở thành giáo viên tiếng Anh trong tương lai.",
+    "link": "https://dantri.com.vn/giao-duc/bi-quyet-tro-thanh-thu-khoa-toan-truong-cua-ba-me-u40-20250322205358478.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Nguyễn Song Châu đã đạt được thành tựu gì trong học tập?",
+    "answers": [
+      {
+        "text": "Stt thủ khoa toàn trường",
+        "correct": true
+      },
+      {
+        "text": "Tốt nghiệp loại khá",
+        "correct": false
+      },
+      {
+        "text": "Tốt nghiệp loại trung bình",
+        "correct": false
+      },
+      {
+        "text": "Trở thành giảng viên",
+        "correct": false
+      },
+      {
+        "text": "Tham gia nhiều hoạt động ngoại khóa",
         "correct": false
       }
     ]
@@ -1134,32 +1165,32 @@
     ]
   },
   {
-    "title": "Hủy mỡ để giảm 'bụng bia'",
-    "content": "Bài viết trình bày trường hợp của anh Bình và anh Cường, hai người đàn ông gặp vấn đề về vòng bụng lớn, thường được gọi là 'bụng bia'. Anh Bình đã chọn phương pháp đông hủy mỡ để giảm mỡ bụng, với kết quả giảm 6 cm vòng bụng trong hai tháng. Trong khi đó, anh Cường đã cải thiện tình trạng sức khỏe của mình bằng cách kết hợp điều trị nội tiết, dinh dưỡng và vận động, giúp giảm 12 kg và vòng bụng xuống còn 88 cm. Bác sĩ khuyến cáo nam giới cần chú ý đến vòng bụng lớn để phòng ngừa các vấn đề sức khỏe liên quan đến mỡ nội tạng.",
-    "link": "https://vnexpress.net/huy-mo-de-giam-bung-bia-4864565.html",
+    "title": "Ho ra máu cảnh báo bệnh gì?",
+    "content": "Ho ra máu có thể là dấu hiệu của nhiều bệnh lý nghiêm trọng như ung thư phổi, lao phổi, và bệnh phổi tắc nghẽn mạn tính. Các nguyên nhân khác bao gồm viêm phế quản, tổn thương đường hô hấp, và các tình trạng viêm tự miễn. Nếu ho ra máu kéo dài hoặc kèm theo triệu chứng nghiêm trọng như đau ngực hay sút cân, người bệnh nên đi khám ngay. Để phòng ngừa, cần điều trị sớm các bệnh viêm nhiễm đường hô hấp và bỏ thuốc lá.",
+    "link": "https://vnexpress.net/ho-ra-mau-canh-bao-benh-gi-4860525.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Làm thế nào để giảm 'bụng bia'?",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Ho ra máu có thể cảnh báo bệnh gì nguy hiểm?",
     "answers": [
       {
-        "text": "Sử dụng phương pháp đông hủy mỡ kết hợp chế độ dinh dưỡng và tập luyện",
+        "text": "Ung thư phổi",
         "correct": true
       },
       {
-        "text": "Chỉ cần ăn kiêng mà không cần tập thể dục",
+        "text": "Cảm cúm",
         "correct": false
       },
       {
-        "text": "Uống thuốc giảm cân mà không cần thay đổi lối sống",
+        "text": "Viêm họng",
         "correct": false
       },
       {
-        "text": "Không làm gì mà vẫn giảm cân",
+        "text": "Cao huyết áp",
         "correct": false
       },
       {
-        "text": "Chỉ cần tập thể dục mà không cần thay đổi chế độ ăn uống",
+        "text": "Đau dạ dày",
         "correct": false
       }
     ]
@@ -1196,6 +1227,37 @@
     ]
   },
   {
+    "title": "Hủy mỡ để giảm 'bụng bia'",
+    "content": "Bài viết trình bày trường hợp của anh Bình và anh Cường, hai người đàn ông gặp vấn đề về vòng bụng lớn, thường được gọi là 'bụng bia'. Anh Bình đã chọn phương pháp đông hủy mỡ để giảm mỡ bụng, với kết quả giảm 6 cm vòng bụng trong hai tháng. Trong khi đó, anh Cường đã cải thiện tình trạng sức khỏe của mình bằng cách kết hợp điều trị nội tiết, dinh dưỡng và vận động, giúp giảm 12 kg và vòng bụng xuống còn 88 cm. Bác sĩ khuyến cáo nam giới cần chú ý đến vòng bụng lớn để phòng ngừa các vấn đề sức khỏe liên quan đến mỡ nội tạng.",
+    "link": "https://vnexpress.net/huy-mo-de-giam-bung-bia-4864565.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Làm thế nào để giảm 'bụng bia'?",
+    "answers": [
+      {
+        "text": "Sử dụng phương pháp đông hủy mỡ kết hợp chế độ dinh dưỡng và tập luyện",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần ăn kiêng mà không cần tập thể dục",
+        "correct": false
+      },
+      {
+        "text": "Uống thuốc giảm cân mà không cần thay đổi lối sống",
+        "correct": false
+      },
+      {
+        "text": "Không làm gì mà vẫn giảm cân",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần tập thể dục mà không cần thay đổi chế độ ăn uống",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nặn mụn có nguy cơ mắc uốn ván không?",
     "content": "Nặn mụn có thể dẫn đến nguy cơ mắc uốn ván nếu không thực hiện đúng cách, bởi vì việc tạo ra vết thương hở có thể cho phép vi khuẩn xâm nhập. Đặc biệt, nếu dụng cụ không được tiệt trùng hoặc tay không sạch sẽ, nguy cơ nhiễm trùng tăng lên. Để phòng ngừa, người nặn mụn nên tiêm vaccine phòng uốn ván và thăm khám bác sĩ để được điều trị đúng cách.",
     "link": "https://vnexpress.net/nan-mun-co-nguy-co-mac-uon-van-khong-4864591.html",
@@ -1218,37 +1280,6 @@
       },
       {
         "text": "Chỉ nếu có vết thương sâu.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ho ra máu cảnh báo bệnh gì?",
-    "content": "Ho ra máu có thể là dấu hiệu của nhiều bệnh lý nghiêm trọng như ung thư phổi, lao phổi, và bệnh phổi tắc nghẽn mạn tính. Các nguyên nhân khác bao gồm viêm phế quản, tổn thương đường hô hấp, và các tình trạng viêm tự miễn. Nếu ho ra máu kéo dài hoặc kèm theo triệu chứng nghiêm trọng như đau ngực hay sút cân, người bệnh nên đi khám ngay. Để phòng ngừa, cần điều trị sớm các bệnh viêm nhiễm đường hô hấp và bỏ thuốc lá.",
-    "link": "https://vnexpress.net/ho-ra-mau-canh-bao-benh-gi-4860525.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Ho ra máu có thể cảnh báo bệnh gì nguy hiểm?",
-    "answers": [
-      {
-        "text": "Ung thư phổi",
-        "correct": true
-      },
-      {
-        "text": "Cảm cúm",
-        "correct": false
-      },
-      {
-        "text": "Viêm họng",
-        "correct": false
-      },
-      {
-        "text": "Cao huyết áp",
-        "correct": false
-      },
-      {
-        "text": "Đau dạ dày",
         "correct": false
       }
     ]
@@ -1401,33 +1432,6 @@
     ]
   },
   {
-    "title": "Sinh con đầu lòng ở tuổi 54",
-    "content": "Một người phụ nữ 54 tuổi, mắc bệnh lạc nội mạc và có tử cung xơ hóa hoàn toàn, đã mang thai thành công nhờ thụ tinh ống nghiệm (IVF). Tuy nhiên, thai kỳ của bà gặp nhiều biến chứng, dẫn đến ca sinh mổ khó khăn. Các bác sĩ đã phải can thiệp phẫu thuật sâu để đưa em bé ra, và cuối cùng, một bé trai nặng 2,1 kg đã chào đời khỏe mạnh. Hiện tại, sức khỏe của cả mẹ và con đều ổn định, được xem là một kỳ tích trong y học.",
-    "link": "https://vnexpress.net/sinh-con-dau-long-o-tuoi-54-4864546.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Một người phụ nữ 54 tuổi đã sinh con thành công như thế nào?",
-    "answers": [
-      {
-        "text": "Nhờ thụ tinh ống nghiệm (IVF)",
-        "correct": true
-      },
-      {
-        "text": "Bằng phương pháp tự nhiên",
-        "correct": false
-      },
-      {
-        "text": "Thông qua thuốc điều trị",
-        "correct": false
-      },
-      {
-        "text": "Bằng cách nhận con nuôi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Thuốc đích, miễn dịch có thay hóa trị ung thư vú được không?",
     "content": "Bài viết thảo luận về việc liệu liệu pháp thuốc đích và miễn dịch có thể thay thế hóa trị trong điều trị ung thư vú hay không. Theo bác sĩ, thuốc đích và liệu pháp miễn dịch là những phương pháp mới có thể giúp giảm tác dụng phụ so với hóa trị, nhưng chúng không thể hoàn toàn thay thế hóa trị. Việc điều trị sẽ phụ thuộc vào đặc điểm sinh học của từng bệnh nhân và tình trạng bệnh. Tùy thuộc vào từng trường hợp cụ thể, bác sĩ sẽ quyết định phương pháp phù hợp để tối ưu hiệu quả điều trị.",
     "link": "https://vnexpress.net/thuoc-dich-mien-dich-co-thay-hoa-tri-ung-thu-vu-duoc-khong-4864508.html",
@@ -1450,6 +1454,33 @@
       },
       {
         "text": "Không áp dụng cho mọi bệnh nhân",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sinh con đầu lòng ở tuổi 54",
+    "content": "Một người phụ nữ 54 tuổi, mắc bệnh lạc nội mạc và có tử cung xơ hóa hoàn toàn, đã mang thai thành công nhờ thụ tinh ống nghiệm (IVF). Tuy nhiên, thai kỳ của bà gặp nhiều biến chứng, dẫn đến ca sinh mổ khó khăn. Các bác sĩ đã phải can thiệp phẫu thuật sâu để đưa em bé ra, và cuối cùng, một bé trai nặng 2,1 kg đã chào đời khỏe mạnh. Hiện tại, sức khỏe của cả mẹ và con đều ổn định, được xem là một kỳ tích trong y học.",
+    "link": "https://vnexpress.net/sinh-con-dau-long-o-tuoi-54-4864546.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Một người phụ nữ 54 tuổi đã sinh con thành công như thế nào?",
+    "answers": [
+      {
+        "text": "Nhờ thụ tinh ống nghiệm (IVF)",
+        "correct": true
+      },
+      {
+        "text": "Bằng phương pháp tự nhiên",
+        "correct": false
+      },
+      {
+        "text": "Thông qua thuốc điều trị",
+        "correct": false
+      },
+      {
+        "text": "Bằng cách nhận con nuôi",
         "correct": false
       }
     ]
@@ -1946,33 +1977,6 @@
     ]
   },
   {
-    "title": "Bị suy thận có thể chơi pickleball không?",
-    "content": "Người bị suy thận mạn giai đoạn hai như bạn cần thận trọng khi tham gia các hoạt động thể thao như pickleball. Mặc dù môn này có nhiều lợi ích cho sức khỏe, nhưng cũng đi kèm với nguy cơ chấn thương cao. Trước khi tiếp tục chơi, bạn nên tham khảo ý kiến bác sĩ để đảm bảo an toàn cho sức khỏe của mình.",
-    "link": "https://vnexpress.net/bi-suy-than-co-the-choi-pickleball-khong-4864511.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Người bị suy thận có thể tiếp tục chơi pickleball không?",
-    "answers": [
-      {
-        "text": "Nên tham khảo ý kiến bác sĩ trước khi chơi.",
-        "correct": true
-      },
-      {
-        "text": "Có thể chơi mà không cần lo lắng gì.",
-        "correct": false
-      },
-      {
-        "text": "Chơi bình thường như trước đây.",
-        "correct": false
-      },
-      {
-        "text": "Không nên chơi bất kỳ môn thể thao nào.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cặp đôi đồng tính muốn có con nên làm gì?",
     "content": "Cặp đôi đồng tính có thể có con thông qua các phương pháp hỗ trợ sinh sản hiện đại như thụ tinh nhân tạo (IUI) và thụ tinh trong ống nghiệm (IVF). Những cặp đồng tính nữ có thể xin tinh trùng từ ngân hàng và thực hiện IUI, trong khi cặp đồng tính nam có thể phải chờ đợi các quy định pháp luật cho phép mang thai hộ. Bài viết cũng nhấn mạnh tầm quan trọng của việc tư vấn tâm lý cho bệnh nhân trong quá trình điều trị IVF.",
     "link": "https://vnexpress.net/cap-doi-dong-tinh-muon-co-con-nen-lam-gi-4864488.html",
@@ -1999,6 +2003,33 @@
       },
       {
         "text": "Chờ đợi pháp luật cho phép mang thai hộ",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bị suy thận có thể chơi pickleball không?",
+    "content": "Người bị suy thận mạn giai đoạn hai như bạn cần thận trọng khi tham gia các hoạt động thể thao như pickleball. Mặc dù môn này có nhiều lợi ích cho sức khỏe, nhưng cũng đi kèm với nguy cơ chấn thương cao. Trước khi tiếp tục chơi, bạn nên tham khảo ý kiến bác sĩ để đảm bảo an toàn cho sức khỏe của mình.",
+    "link": "https://vnexpress.net/bi-suy-than-co-the-choi-pickleball-khong-4864511.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Người bị suy thận có thể tiếp tục chơi pickleball không?",
+    "answers": [
+      {
+        "text": "Nên tham khảo ý kiến bác sĩ trước khi chơi.",
+        "correct": true
+      },
+      {
+        "text": "Có thể chơi mà không cần lo lắng gì.",
+        "correct": false
+      },
+      {
+        "text": "Chơi bình thường như trước đây.",
+        "correct": false
+      },
+      {
+        "text": "Không nên chơi bất kỳ môn thể thao nào.",
         "correct": false
       }
     ]
