Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Syria nêu điều kiện cho phép Nga duy trì căn cứ quân sự",
+    "content": "Lãnh đạo mới của Syria, Ahmed al-Sharaa, đã đề xuất rằng Nga phải bàn giao cựu Tổng thống Bashar al-Assad để đổi lấy việc duy trì hai căn cứ quân sự chiến lược tại Syria. Ông al-Sharaa nhấn mạnh rằng mọi thỏa thuận với Nga phải tính đến lợi ích của Damascus. Hiện tại, quan hệ giữa Nga và Syria đang căng thẳng sau khi Assad bị lật đổ và chạy khỏi đất nước, trong khi Nga vẫn muốn duy trì sự hiện diện quân sự tại đây.",
+    "link": "https://dantri.com.vn/the-gioi/syria-neu-dieu-kien-cho-phep-nga-duy-tri-can-cu-quan-su-20250323063525356.htm",
+    "cat": "the-gioi",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Syria đã đưa ra điều kiện gì để Nga giữ căn cứ quân sự tại nước này?",
+    "answers": [
+      {
+        "text": "Bàn giao cựu Tổng thống Bashar al-Assad",
+        "correct": true
+      },
+      {
+        "text": "Tăng cường quân số lính Nga",
+        "correct": false
+      },
+      {
+        "text": "Giảm thiểu sự hiện diện quân sự của Mỹ",
+        "correct": false
+      },
+      {
+        "text": "Đầu tư vào cơ sở hạ tầng",
+        "correct": false
+      },
+      {
+        "text": "Tham gia vào các cuộc bầu cử sớm",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Toyota Supra ra mắt phiên bản cuối cùng, giá 155.000 USD",
     "content": "Toyota vừa ra mắt phiên bản cuối cùng của dòng xe thể thao Supra, mang tên GR Supra A90 Final Edition, với giá bán 155.000 USD. Phiên bản này chỉ sản xuất giới hạn 300 chiếc và khách hàng phải tham gia bốc thăm để có cơ hội mua. GR Supra A90 Final Edition được nâng cấp về sức mạnh, với động cơ 6 xi-lanh 3 lít đạt công suất 429 mã lực, cùng nhiều cải tiến về khí động học và nội thất so với các phiên bản tiêu chuẩn.",
     "link": "https://vnexpress.net/toyota-supra-ra-mat-phien-ban-cuoi-cung-gia-155-000-usd-4864630.html",
@@ -591,28 +622,28 @@
     ]
   },
   {
-    "title": "Chứng hoang tưởng",
-    "content": "Chứng hoang tưởng là tình trạng tâm lý liên quan đến cảm giác nghi ngờ và sợ hãi về người khác mà không có căn cứ thực tế. Triệu chứng có thể bao gồm sự nghi ngờ dữ dội, cảm giác bị đe dọa, và khó khăn trong việc thư giãn. Chứng hoang tưởng thường liên quan đến các rối loạn tâm thần khác và có thể được điều trị bằng liệu pháp tâm lý và thuốc. Nếu không được kiểm soát, tình trạng này có thể dẫn đến những biến chứng nghiêm trọng và hành vi gây nguy hiểm.",
-    "link": "https://vnexpress.net/chung-hoang-tuong-4863575.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
+    "title": "IU: \"Em gái quốc dân\" giàu có xứ Hàn, từng trải qua tuổi thơ khó khăn",
+    "content": "IU, tên thật là Lee Ji Eun, là một trong những ca sĩ và diễn viên nổi tiếng của Hàn Quốc, được biết đến với giọng hát ngọt ngào và nhiều ca khúc thành công. Mặc dù hiện tại sở hữu tài sản gần 50 triệu USD, IU đã trải qua một tuổi thơ khó khăn với nhiều thử thách, bao gồm việc bị bắt nạt và gia đình lâm vào cảnh khốn khó. Cô đã kiên trì theo đuổi ước mơ ca hát và hiện đang gây chú ý với bộ phim \"When life gives you tangerines\". IU không chỉ thành công trong sự nghiệp mà còn tích cực tham gia các hoạt động từ thiện.",
+    "link": "https://dantri.com.vn/giai-tri/iu-em-gai-quoc-dan-giau-co-xu-han-tung-trai-qua-tuoi-tho-kho-khan-20250318195448529.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
     "importance": 8,
-    "question": "Chứng hoang tưởng là gì?",
+    "question": "IU đã trải qua những khó khăn gì trong tuổi thơ của mình?",
     "answers": [
       {
-        "text": "Chứng hoang tưởng là tình trạng nghi ngờ và sợ hãi không có căn cứ về người khác.",
+        "text": "Cô từng bị bắt nạt và gia đình lâm vào cảnh khó khăn.",
         "correct": true
       },
       {
-        "text": "Chứng hoang tưởng là một loại bệnh truyền nhiễm.",
+        "text": "Cô sống trong một gia đình giàu có mà không gặp khó khăn gì.",
         "correct": false
       },
       {
-        "text": "Chứng hoang tưởng là một trạng thái tạm thời không cần điều trị.",
+        "text": "Cô không có ước mơ trở thành ca sĩ.",
         "correct": false
       },
       {
-        "text": "Chứng hoang tưởng là một triệu chứng của bệnh cảm cúm.",
+        "text": "Cô luôn được hỗ trợ từ gia đình trong mọi việc.",
         "correct": false
       }
     ]
@@ -640,33 +671,6 @@
       },
       {
         "text": "Vì anh muốn đi du lịch vòng quanh thế giới.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "IU: \"Em gái quốc dân\" giàu có xứ Hàn, từng trải qua tuổi thơ khó khăn",
-    "content": "IU, tên thật là Lee Ji Eun, là một trong những ca sĩ và diễn viên nổi tiếng của Hàn Quốc, được biết đến với giọng hát ngọt ngào và nhiều ca khúc thành công. Mặc dù hiện tại sở hữu tài sản gần 50 triệu USD, IU đã trải qua một tuổi thơ khó khăn với nhiều thử thách, bao gồm việc bị bắt nạt và gia đình lâm vào cảnh khốn khó. Cô đã kiên trì theo đuổi ước mơ ca hát và hiện đang gây chú ý với bộ phim \"When life gives you tangerines\". IU không chỉ thành công trong sự nghiệp mà còn tích cực tham gia các hoạt động từ thiện.",
-    "link": "https://dantri.com.vn/giai-tri/iu-em-gai-quoc-dan-giau-co-xu-han-tung-trai-qua-tuoi-tho-kho-khan-20250318195448529.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 8,
-    "question": "IU đã trải qua những khó khăn gì trong tuổi thơ của mình?",
-    "answers": [
-      {
-        "text": "Cô từng bị bắt nạt và gia đình lâm vào cảnh khó khăn.",
-        "correct": true
-      },
-      {
-        "text": "Cô sống trong một gia đình giàu có mà không gặp khó khăn gì.",
-        "correct": false
-      },
-      {
-        "text": "Cô không có ước mơ trở thành ca sĩ.",
-        "correct": false
-      },
-      {
-        "text": "Cô luôn được hỗ trợ từ gia đình trong mọi việc.",
         "correct": false
       }
     ]
@@ -729,6 +733,33 @@
       },
       {
         "text": "Tham gia nhiều hoạt động ngoại khóa",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chứng hoang tưởng",
+    "content": "Chứng hoang tưởng là tình trạng tâm lý liên quan đến cảm giác nghi ngờ và sợ hãi về người khác mà không có căn cứ thực tế. Triệu chứng có thể bao gồm sự nghi ngờ dữ dội, cảm giác bị đe dọa, và khó khăn trong việc thư giãn. Chứng hoang tưởng thường liên quan đến các rối loạn tâm thần khác và có thể được điều trị bằng liệu pháp tâm lý và thuốc. Nếu không được kiểm soát, tình trạng này có thể dẫn đến những biến chứng nghiêm trọng và hành vi gây nguy hiểm.",
+    "link": "https://vnexpress.net/chung-hoang-tuong-4863575.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Chứng hoang tưởng là gì?",
+    "answers": [
+      {
+        "text": "Chứng hoang tưởng là tình trạng nghi ngờ và sợ hãi không có căn cứ về người khác.",
+        "correct": true
+      },
+      {
+        "text": "Chứng hoang tưởng là một loại bệnh truyền nhiễm.",
+        "correct": false
+      },
+      {
+        "text": "Chứng hoang tưởng là một trạng thái tạm thời không cần điều trị.",
+        "correct": false
+      },
+      {
+        "text": "Chứng hoang tưởng là một triệu chứng của bệnh cảm cúm.",
         "correct": false
       }
     ]
@@ -1488,37 +1519,6 @@
     ]
   },
   {
-    "title": "Ho ra máu cảnh báo bệnh gì?",
-    "content": "Ho ra máu có thể là dấu hiệu của nhiều bệnh lý nghiêm trọng như ung thư phổi, lao phổi, và bệnh phổi tắc nghẽn mạn tính. Các nguyên nhân khác bao gồm viêm phế quản, tổn thương đường hô hấp, và các tình trạng viêm tự miễn. Nếu ho ra máu kéo dài hoặc kèm theo triệu chứng nghiêm trọng như đau ngực hay sút cân, người bệnh nên đi khám ngay. Để phòng ngừa, cần điều trị sớm các bệnh viêm nhiễm đường hô hấp và bỏ thuốc lá.",
-    "link": "https://vnexpress.net/ho-ra-mau-canh-bao-benh-gi-4860525.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Ho ra máu có thể cảnh báo bệnh gì nguy hiểm?",
-    "answers": [
-      {
-        "text": "Ung thư phổi",
-        "correct": true
-      },
-      {
-        "text": "Cảm cúm",
-        "correct": false
-      },
-      {
-        "text": "Viêm họng",
-        "correct": false
-      },
-      {
-        "text": "Cao huyết áp",
-        "correct": false
-      },
-      {
-        "text": "Đau dạ dày",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bị liệt dây thần kinh số 7 nên ăn gì?",
     "content": "Bị liệt dây thần kinh số 7, người bệnh cần bổ sung thực phẩm giàu dinh dưỡng để hỗ trợ phục hồi. Các loại thực phẩm như thịt nạc, cá béo, ngũ cốc nguyên hạt và các loại đậu giàu omega-3 rất có lợi cho sức khỏe. Ngoài ra, các loại trái cây và rau xanh cung cấp chất chống oxy hóa, vitamin và khoáng chất thiết yếu, giúp tăng cường hệ miễn dịch và chức năng thần kinh. Uống đủ nước và duy trì chế độ ăn uống lành mạnh cũng rất quan trọng.",
     "link": "https://vnexpress.net/bi-liet-day-than-kinh-so-7-nen-an-gi-4864560.html",
@@ -1603,6 +1603,37 @@
       },
       {
         "text": "Chỉ nếu có vết thương sâu.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ho ra máu cảnh báo bệnh gì?",
+    "content": "Ho ra máu có thể là dấu hiệu của nhiều bệnh lý nghiêm trọng như ung thư phổi, lao phổi, và bệnh phổi tắc nghẽn mạn tính. Các nguyên nhân khác bao gồm viêm phế quản, tổn thương đường hô hấp, và các tình trạng viêm tự miễn. Nếu ho ra máu kéo dài hoặc kèm theo triệu chứng nghiêm trọng như đau ngực hay sút cân, người bệnh nên đi khám ngay. Để phòng ngừa, cần điều trị sớm các bệnh viêm nhiễm đường hô hấp và bỏ thuốc lá.",
+    "link": "https://vnexpress.net/ho-ra-mau-canh-bao-benh-gi-4860525.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Ho ra máu có thể cảnh báo bệnh gì nguy hiểm?",
+    "answers": [
+      {
+        "text": "Ung thư phổi",
+        "correct": true
+      },
+      {
+        "text": "Cảm cúm",
+        "correct": false
+      },
+      {
+        "text": "Viêm họng",
+        "correct": false
+      },
+      {
+        "text": "Cao huyết áp",
+        "correct": false
+      },
+      {
+        "text": "Đau dạ dày",
         "correct": false
       }
     ]
@@ -1755,33 +1786,6 @@
     ]
   },
   {
-    "title": "Thuốc đích, miễn dịch có thay hóa trị ung thư vú được không?",
-    "content": "Bài viết thảo luận về việc liệu liệu pháp thuốc đích và miễn dịch có thể thay thế hóa trị trong điều trị ung thư vú hay không. Theo bác sĩ, thuốc đích và liệu pháp miễn dịch là những phương pháp mới có thể giúp giảm tác dụng phụ so với hóa trị, nhưng chúng không thể hoàn toàn thay thế hóa trị. Việc điều trị sẽ phụ thuộc vào đặc điểm sinh học của từng bệnh nhân và tình trạng bệnh. Tùy thuộc vào từng trường hợp cụ thể, bác sĩ sẽ quyết định phương pháp phù hợp để tối ưu hiệu quả điều trị.",
-    "link": "https://vnexpress.net/thuoc-dich-mien-dich-co-thay-hoa-tri-ung-thu-vu-duoc-khong-4864508.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Liệu pháp thuốc đích và miễn dịch có thể thay thế hóa trị trong điều trị ung thư vú không?",
-    "answers": [
-      {
-        "text": "Không hoàn toàn thay thế",
-        "correct": true
-      },
-      {
-        "text": "Có thể thay thế hoàn toàn",
-        "correct": false
-      },
-      {
-        "text": "Chỉ dùng cho giai đoạn cuối",
-        "correct": false
-      },
-      {
-        "text": "Không áp dụng cho mọi bệnh nhân",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Sinh con đầu lòng ở tuổi 54",
     "content": "Một người phụ nữ 54 tuổi, mắc bệnh lạc nội mạc và có tử cung xơ hóa hoàn toàn, đã mang thai thành công nhờ thụ tinh ống nghiệm (IVF). Tuy nhiên, thai kỳ của bà gặp nhiều biến chứng, dẫn đến ca sinh mổ khó khăn. Các bác sĩ đã phải can thiệp phẫu thuật sâu để đưa em bé ra, và cuối cùng, một bé trai nặng 2,1 kg đã chào đời khỏe mạnh. Hiện tại, sức khỏe của cả mẹ và con đều ổn định, được xem là một kỳ tích trong y học.",
     "link": "https://vnexpress.net/sinh-con-dau-long-o-tuoi-54-4864546.html",
@@ -1804,6 +1808,33 @@
       },
       {
         "text": "Bằng cách nhận con nuôi",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Thuốc đích, miễn dịch có thay hóa trị ung thư vú được không?",
+    "content": "Bài viết thảo luận về việc liệu liệu pháp thuốc đích và miễn dịch có thể thay thế hóa trị trong điều trị ung thư vú hay không. Theo bác sĩ, thuốc đích và liệu pháp miễn dịch là những phương pháp mới có thể giúp giảm tác dụng phụ so với hóa trị, nhưng chúng không thể hoàn toàn thay thế hóa trị. Việc điều trị sẽ phụ thuộc vào đặc điểm sinh học của từng bệnh nhân và tình trạng bệnh. Tùy thuộc vào từng trường hợp cụ thể, bác sĩ sẽ quyết định phương pháp phù hợp để tối ưu hiệu quả điều trị.",
+    "link": "https://vnexpress.net/thuoc-dich-mien-dich-co-thay-hoa-tri-ung-thu-vu-duoc-khong-4864508.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Liệu pháp thuốc đích và miễn dịch có thể thay thế hóa trị trong điều trị ung thư vú không?",
+    "answers": [
+      {
+        "text": "Không hoàn toàn thay thế",
+        "correct": true
+      },
+      {
+        "text": "Có thể thay thế hoàn toàn",
+        "correct": false
+      },
+      {
+        "text": "Chỉ dùng cho giai đoạn cuối",
+        "correct": false
+      },
+      {
+        "text": "Không áp dụng cho mọi bệnh nhân",
         "correct": false
       }
     ]
@@ -2300,33 +2331,6 @@
     ]
   },
   {
-    "title": "Bị suy thận có thể chơi pickleball không?",
-    "content": "Người bị suy thận mạn giai đoạn hai như bạn cần thận trọng khi tham gia các hoạt động thể thao như pickleball. Mặc dù môn này có nhiều lợi ích cho sức khỏe, nhưng cũng đi kèm với nguy cơ chấn thương cao. Trước khi tiếp tục chơi, bạn nên tham khảo ý kiến bác sĩ để đảm bảo an toàn cho sức khỏe của mình.",
-    "link": "https://vnexpress.net/bi-suy-than-co-the-choi-pickleball-khong-4864511.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Người bị suy thận có thể tiếp tục chơi pickleball không?",
-    "answers": [
-      {
-        "text": "Nên tham khảo ý kiến bác sĩ trước khi chơi.",
-        "correct": true
-      },
-      {
-        "text": "Có thể chơi mà không cần lo lắng gì.",
-        "correct": false
-      },
-      {
-        "text": "Chơi bình thường như trước đây.",
-        "correct": false
-      },
-      {
-        "text": "Không nên chơi bất kỳ môn thể thao nào.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cặp đôi đồng tính muốn có con nên làm gì?",
     "content": "Cặp đôi đồng tính có thể có con thông qua các phương pháp hỗ trợ sinh sản hiện đại như thụ tinh nhân tạo (IUI) và thụ tinh trong ống nghiệm (IVF). Những cặp đồng tính nữ có thể xin tinh trùng từ ngân hàng và thực hiện IUI, trong khi cặp đồng tính nam có thể phải chờ đợi các quy định pháp luật cho phép mang thai hộ. Bài viết cũng nhấn mạnh tầm quan trọng của việc tư vấn tâm lý cho bệnh nhân trong quá trình điều trị IVF.",
     "link": "https://vnexpress.net/cap-doi-dong-tinh-muon-co-con-nen-lam-gi-4864488.html",
@@ -2353,6 +2357,33 @@
       },
       {
         "text": "Chờ đợi pháp luật cho phép mang thai hộ",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bị suy thận có thể chơi pickleball không?",
+    "content": "Người bị suy thận mạn giai đoạn hai như bạn cần thận trọng khi tham gia các hoạt động thể thao như pickleball. Mặc dù môn này có nhiều lợi ích cho sức khỏe, nhưng cũng đi kèm với nguy cơ chấn thương cao. Trước khi tiếp tục chơi, bạn nên tham khảo ý kiến bác sĩ để đảm bảo an toàn cho sức khỏe của mình.",
+    "link": "https://vnexpress.net/bi-suy-than-co-the-choi-pickleball-khong-4864511.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Người bị suy thận có thể tiếp tục chơi pickleball không?",
+    "answers": [
+      {
+        "text": "Nên tham khảo ý kiến bác sĩ trước khi chơi.",
+        "correct": true
+      },
+      {
+        "text": "Có thể chơi mà không cần lo lắng gì.",
+        "correct": false
+      },
+      {
+        "text": "Chơi bình thường như trước đây.",
+        "correct": false
+      },
+      {
+        "text": "Không nên chơi bất kỳ môn thể thao nào.",
         "correct": false
       }
     ]
@@ -3914,37 +3945,6 @@
       },
       {
         "text": "Để gây rối cho chính phủ Nga.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cầu mây Việt Nam lần đầu vô địch World Cup",
-    "content": "Việt Nam đã giành chức vô địch World Cup cầu mây lần đầu tiên trong lịch sử sau khi đánh bại Thái Lan với tỷ số 15-12, 12-15, 15-13 trong trận chung kết diễn ra vào tối 21/3 tại Ấn Độ. Đội hình thi đấu của Việt Nam gồm Trần Thị Ngọc Yến, Nguyễn Thị My, Nguyễn Thị Ngọc Huyền và Nguyễn Thị Yến. Đây là lần đầu tiên Việt Nam giành được huy chương vàng tại giải đấu này, trước đó họ đã có 5 huy chương bạc trong 4 kỳ World Cup trước đó.",
-    "link": "https://vnexpress.net/cau-may-viet-nam-lan-dau-vo-dich-world-cup-4864418.html",
-    "cat": "the-thao",
-    "positivity": 10,
-    "importance": 9,
-    "question": "Việt Nam đã giành chức vô địch World Cup cầu mây lần đầu tiên ở đâu?",
-    "answers": [
-      {
-        "text": "Ấn Độ",
-        "correct": true
-      },
-      {
-        "text": "Thái Lan",
-        "correct": false
-      },
-      {
-        "text": "Malaysia",
-        "correct": false
-      },
-      {
-        "text": "Hàn Quốc",
-        "correct": false
-      },
-      {
-        "text": "Myanmar",
         "correct": false
       }
     ]
