Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,60 @@
     */
     const newsData = [
   {
+    "title": "Hạn sớm, Tây Nguyên tất bật lo nước cho cây trái",
+    "content": "Tình trạng hạn hán tại Tây Nguyên đang gây ra nhiều khó khăn cho nông dân, đặc biệt là đối với các loại cây trồng chủ lực như cà phê, hồ tiêu và sầu riêng. Nhiều nông dân đã phải đào ao trữ nước và khoan giếng để duy trì sản xuất trong bối cảnh thiếu nước trầm trọng. Giải pháp ứng dụng công nghệ tưới tiết kiệm và phát triển giống cây trồng chịu hạn được cho là cần thiết để bảo vệ nguồn nước và nâng cao năng suất cây trồng.",
+    "link": "https://tuoitre.vn/han-som-tay-nguyen-tat-bat-lo-nuoc-cho-cay-trai-20250322233440658.htm",
+    "cat": "kinh-doanh",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Tình trạng hạn hán tại Tây Nguyên ảnh hưởng đến cây trồng như thế nào?",
+    "answers": [
+      {
+        "text": "Gây ra nguy cơ chết khát cho nhiều loại cây trồng.",
+        "correct": true
+      },
+      {
+        "text": "Tăng năng suất cây trồng.",
+        "correct": false
+      },
+      {
+        "text": "Giảm chi phí sản xuất cho nông dân.",
+        "correct": false
+      },
+      {
+        "text": "Khuyến khích nông dân mở rộng diện tích trồng trọt.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Phú Quốc đồng loạt nâng cấp hạ tầng đón APEC 2027",
+    "content": "Phú Quốc đang tích cực nâng cấp hạ tầng để chuẩn bị cho sự kiện APEC 2027, với nhiều dự án trọng điểm như mở rộng sân bay quốc tế, nâng cấp cảng biển và xây dựng trung tâm hội nghị. Các cơ quan chức năng đã khởi động tiến trình giải phóng mặt bằng và huy động nguồn lực từ các nhà đầu tư lớn. Mục tiêu là biến Phú Quốc thành trung tâm du lịch và kinh tế hàng đầu khu vực, phục vụ cho sự kiện lớn này.",
+    "link": "https://tuoitre.vn/phu-quoc-dong-loat-nang-cap-ha-tang-don-apec-2027-20250322234746322.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Phú Quốc đang thực hiện những dự án nào để chuẩn bị cho APEC 2027?",
+    "answers": [
+      {
+        "text": "Mở rộng sân bay quốc tế và nâng cấp cảng biển",
+        "correct": true
+      },
+      {
+        "text": "Xây dựng thêm khách sạn 5 sao",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường bảo vệ môi trường biển",
+        "correct": false
+      },
+      {
+        "text": "Nâng cấp hệ thống điện và nước",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Mua nhà trong dự án chưa có giấy chứng nhận quyền sử dụng, bán lại được không?",
     "content": "Bài viết thảo luận về việc mua nhà trong các dự án chưa có giấy chứng nhận quyền sử dụng đất và khả năng bán lại chúng. Theo quy định của Luật Nhà ở năm 2023, nhà ở không nhất thiết phải có giấy chứng nhận quyền sử dụng đất để thực hiện các giao dịch mua bán, nhưng cần có các giấy tờ chứng minh đủ điều kiện giao dịch. Các trường hợp cụ thể được nêu rõ, bao gồm mua bán nhà phục vụ tái định cư hoặc nhà ở xã hội với giấy tờ hợp lệ.",
     "link": "https://tuoitre.vn/khong-co-giay-chung-nhan-quyen-su-dung-dat-co-duoc-giao-dich-20250322080338426.htm",
@@ -1573,6 +1627,68 @@
     ]
   },
   {
+    "title": "Bị liệt dây thần kinh số 7 nên ăn gì?",
+    "content": "Bị liệt dây thần kinh số 7, người bệnh cần bổ sung thực phẩm giàu dinh dưỡng để hỗ trợ phục hồi. Các loại thực phẩm như thịt nạc, cá béo, ngũ cốc nguyên hạt và các loại đậu giàu omega-3 rất có lợi cho sức khỏe. Ngoài ra, các loại trái cây và rau xanh cung cấp chất chống oxy hóa, vitamin và khoáng chất thiết yếu, giúp tăng cường hệ miễn dịch và chức năng thần kinh. Uống đủ nước và duy trì chế độ ăn uống lành mạnh cũng rất quan trọng.",
+    "link": "https://vnexpress.net/bi-liet-day-than-kinh-so-7-nen-an-gi-4864560.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Người bị liệt dây thần kinh số 7 nên ăn gì để phục hồi sức khỏe?",
+    "answers": [
+      {
+        "text": "Thịt nạc, cá béo, ngũ cốc nguyên hạt",
+        "correct": true
+      },
+      {
+        "text": "Chỉ ăn trái cây",
+        "correct": false
+      },
+      {
+        "text": "Ăn nhiều đồ chiên xào",
+        "correct": false
+      },
+      {
+        "text": "Chỉ uống nước trái cây",
+        "correct": false
+      },
+      {
+        "text": "Không cần ăn gì đặc biệt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hủy mỡ để giảm 'bụng bia'",
+    "content": "Bài viết trình bày trường hợp của anh Bình và anh Cường, hai người đàn ông gặp vấn đề về vòng bụng lớn, thường được gọi là 'bụng bia'. Anh Bình đã chọn phương pháp đông hủy mỡ để giảm mỡ bụng, với kết quả giảm 6 cm vòng bụng trong hai tháng. Trong khi đó, anh Cường đã cải thiện tình trạng sức khỏe của mình bằng cách kết hợp điều trị nội tiết, dinh dưỡng và vận động, giúp giảm 12 kg và vòng bụng xuống còn 88 cm. Bác sĩ khuyến cáo nam giới cần chú ý đến vòng bụng lớn để phòng ngừa các vấn đề sức khỏe liên quan đến mỡ nội tạng.",
+    "link": "https://vnexpress.net/huy-mo-de-giam-bung-bia-4864565.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Làm thế nào để giảm 'bụng bia'?",
+    "answers": [
+      {
+        "text": "Sử dụng phương pháp đông hủy mỡ kết hợp chế độ dinh dưỡng và tập luyện",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần ăn kiêng mà không cần tập thể dục",
+        "correct": false
+      },
+      {
+        "text": "Uống thuốc giảm cân mà không cần thay đổi lối sống",
+        "correct": false
+      },
+      {
+        "text": "Không làm gì mà vẫn giảm cân",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần tập thể dục mà không cần thay đổi chế độ ăn uống",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nặn mụn có nguy cơ mắc uốn ván không?",
     "content": "Nặn mụn có thể dẫn đến nguy cơ mắc uốn ván nếu không thực hiện đúng cách, bởi vì việc tạo ra vết thương hở có thể cho phép vi khuẩn xâm nhập. Đặc biệt, nếu dụng cụ không được tiệt trùng hoặc tay không sạch sẽ, nguy cơ nhiễm trùng tăng lên. Để phòng ngừa, người nặn mụn nên tiêm vaccine phòng uốn ván và thăm khám bác sĩ để được điều trị đúng cách.",
     "link": "https://vnexpress.net/nan-mun-co-nguy-co-mac-uon-van-khong-4864591.html",
@@ -1626,68 +1742,6 @@
       },
       {
         "text": "Đau dạ dày",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hủy mỡ để giảm 'bụng bia'",
-    "content": "Bài viết trình bày trường hợp của anh Bình và anh Cường, hai người đàn ông gặp vấn đề về vòng bụng lớn, thường được gọi là 'bụng bia'. Anh Bình đã chọn phương pháp đông hủy mỡ để giảm mỡ bụng, với kết quả giảm 6 cm vòng bụng trong hai tháng. Trong khi đó, anh Cường đã cải thiện tình trạng sức khỏe của mình bằng cách kết hợp điều trị nội tiết, dinh dưỡng và vận động, giúp giảm 12 kg và vòng bụng xuống còn 88 cm. Bác sĩ khuyến cáo nam giới cần chú ý đến vòng bụng lớn để phòng ngừa các vấn đề sức khỏe liên quan đến mỡ nội tạng.",
-    "link": "https://vnexpress.net/huy-mo-de-giam-bung-bia-4864565.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Làm thế nào để giảm 'bụng bia'?",
-    "answers": [
-      {
-        "text": "Sử dụng phương pháp đông hủy mỡ kết hợp chế độ dinh dưỡng và tập luyện",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần ăn kiêng mà không cần tập thể dục",
-        "correct": false
-      },
-      {
-        "text": "Uống thuốc giảm cân mà không cần thay đổi lối sống",
-        "correct": false
-      },
-      {
-        "text": "Không làm gì mà vẫn giảm cân",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần tập thể dục mà không cần thay đổi chế độ ăn uống",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bị liệt dây thần kinh số 7 nên ăn gì?",
-    "content": "Bị liệt dây thần kinh số 7, người bệnh cần bổ sung thực phẩm giàu dinh dưỡng để hỗ trợ phục hồi. Các loại thực phẩm như thịt nạc, cá béo, ngũ cốc nguyên hạt và các loại đậu giàu omega-3 rất có lợi cho sức khỏe. Ngoài ra, các loại trái cây và rau xanh cung cấp chất chống oxy hóa, vitamin và khoáng chất thiết yếu, giúp tăng cường hệ miễn dịch và chức năng thần kinh. Uống đủ nước và duy trì chế độ ăn uống lành mạnh cũng rất quan trọng.",
-    "link": "https://vnexpress.net/bi-liet-day-than-kinh-so-7-nen-an-gi-4864560.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Người bị liệt dây thần kinh số 7 nên ăn gì để phục hồi sức khỏe?",
-    "answers": [
-      {
-        "text": "Thịt nạc, cá béo, ngũ cốc nguyên hạt",
-        "correct": true
-      },
-      {
-        "text": "Chỉ ăn trái cây",
-        "correct": false
-      },
-      {
-        "text": "Ăn nhiều đồ chiên xào",
-        "correct": false
-      },
-      {
-        "text": "Chỉ uống nước trái cây",
-        "correct": false
-      },
-      {
-        "text": "Không cần ăn gì đặc biệt",
         "correct": false
       }
     ]
